--- a/AppRisk/templates/rulecomposerview.html
+++ b/AppRisk/templates/rulecomposerview.html
@@ -3,6 +3,8 @@
 {% block content %}
     <h2>Rule List ii</h2>
     <ul>
-            <li>{{ rules }}</li>
+         {% for rule in rules %}
+            <li>{{ rule }}</li>
+        {% endfor %}
     </ul>
 {% endblock %}
