--- a/AppRisk/templates/base.html
+++ b/AppRisk/templates/base.html
@@ -11,101 +11,104 @@
     <script src="{{STATIC_URL}}bootstrap/js/bootstrap.js" type="text/javascript"></script>
     <link href="{{STATIC_URL}}bootstrap/css/bootstrap.css" rel="stylesheet">
 
-    <script type="text/javascript" src="{% static "js/other.js" %}"></script>
+    <script type="text/javascript" src="{% static " js
+    /other.js" %}"></script>
 
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin/css/base.css" />
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin/css/forms.css" />
     <script type="text/javascript" src="{{STATIC_URL}}admin/js/core.js" ></script>
-    <script type="text/javascript" src="{{STATIC_URL}}admin/js/jquery.js" ></script>
-    <script type="text/javascript" src="{{STATIC_URL}}admin/js/jquery.init.js" ></script>
-    <script type="text/javascript" src="{{STATIC_URL}}admin/js/actions.js" ></script>
-    <script type="text/javascript" src="{{STATIC_URL}}admin/js/SelectBox.js" ></script>
-    <script type="text/javascript" src="{{STATIC_URL}}admin/js/SelectFilter2.js" ></script>
-    <script type="text/javascript" src="{{STATIC_URL}}admin/js/calendar.js" ></script>
-    <script type="text/javascript" src="{{STATIC_URL}}admin/js/admin/DateTimeShortcuts.js" ></script>
-    <script type="text/javascript" >window.__admin_media_prefix__ = "/static/admin/"; </script>
+    <script type="text/javascript" src="{{STATIC_URL}}admin/js/jquery.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}admin/js/jquery.init.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}admin/js/actions.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}admin/js/SelectBox.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}admin/js/SelectFilter2.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}admin/js/calendar.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}admin/js/admin/DateTimeShortcuts.js"></script>
+    <script type="text/javascript">window.__admin_media_prefix__ = "/static/admin/"; </script>
 
 
     <style>
-      body {
+        body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-      }
+        }
     </style>
-
 </head>
 
 <body>
-    <!-- Menu de Navegação -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="navbar-inner">
+<!-- Menu de Navegação -->
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="navbar-inner">
         <div class="container">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-6">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-		<a class="navbar-brand" href="#">OneBT</a>
-		</div>
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
-			<ul class="nav navbar-nav">
-				<li class="active"><a href="#">Home</a></li>
-				<li><a href="#">Link</a></li>
-				<li><a href="#">Link</a></li>
-			</ul>
-		</div><!-- /.navbar-collapse -->
-	</div>
-      </div>
-    </nav>
-    <!-- Menu de Navegação -->
-
-    <div class="row">
-	    <div class="col-sm-2 col-md-2">
-		    <ul class="nav nav-sidebar">
-			    <li class="active"><a href="/onebt/index">Overview</a></li>
-			    <li class="dropdown">
-			    	<a class="dropdown-toggle" data-toggle="dropdown" href="/onebt/risk/"> Risk <span class="caret"></span></a>
-			    	<ul class="dropdown-menu" role="menu">
-					<li><a href="/onebt/risk/list">List</a></li>
-	                                <li><a href="/onebt/risk/create/">Create</a></li>
-	                                <li><a href="/onebt/risk/statistic/">Statistic</a></li>
-				</ul>
-			    </li>
-
-			    <li><a href="">Impact</a></li>
-			    <li><a href="">Probability</a></li>
-			    <li><a href="">Risk Level</a></li>
-			    <li><a href="">Assets</a></li>
-			    <li><a href="">Tasks</a></li>
-			    <li><a href="">Projects</a></li>
-			    <li><a href="/onebt/graph">Graph Risks</a></li>
-			    <li><a href="/onebt/about">About</a></li>
-		    </ul>
-	    </div>
-	    <div class="col-sm-10 col-md-10">
-		    <div class="container-fluid">
-			    {% block content %}
-			    {% endblock %}
-		    </div> <!-- /container -->
-	    </div>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-6">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Snoopy</a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
+                <ul class="nav navbar-nav">
+                    <li><a href="#">Configuration</a></li>
+                    <li><a href="#">Statistics</a></li>
+                    <li><a href="#">Sobre</a></li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
     </div>
+</nav>
+<!-- Menu de Navegação -->
 
-    <div id="messages">
-      {% if messages %}
-        {% for message in messages %}
-          <div class="alert alert-{{message.tags}}">
-            <a class="close" data-dismiss="alert">×</a>
-            {{message}}
-          </div>
-        {% endfor %}
-      {% endif %}
+<div class="row">
+    <div class="col-sm-2 col-md-2">
+        <ul class="nav nav-sidebar">
+            <li><a href="/onebt/index">Overview</a></li>
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="/onebt/risk/">Objects<span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                    <li><a href="/apprisk/host/list">Hosts</a></li>
+                    <li><a href="/onebt/risk/create/">Networks</a></li>
+                    <li><a href="/onebt/risk/statistic/">URLs</a></li>
+                    <li><a href="/onebt/risk/statistic/">Protocols</a></li>
+                    <li><a href="/onebt/risk/statistic/">Ports</a></li>
+                    <li><a href="/onebt/risk/statistic/">Chains</a></li>
+                    <li><a href="/onebt/risk/statistic/">Host Sets</a></li>
+                    <li><a href="/onebt/risk/statistic/">Network Sets</a></li>
+                </ul>
+            </li>
+            <li><a href="">Firewall Rules</a></li>
+            <li><a href="">Traffic Shapping</a></li>
+            <li><a href="">Routing</a></li>
+            <li><a href="">System</a></li>
+        </ul>
     </div>
+    <div class="col-sm-10 col-md-10">
+        <div class="container-fluid">
+            {% block content %}
+            {% endblock %}
+        </div>
+        <!-- /container -->
+    </div>
+</div>
 
-     <!-- Morris Charts JavaScript -->
-     <script src="{{STATIC_URL}}morris/raphael.min.js"></script>
-     <script src="{{STATIC_URL}}morris/morris.min.js"></script>
-     <script src="{{STATIC_URL}}morris/morris-data.js"></script>
+<div id="messages">
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-{{message.tags}}">
+        <a class="close" data-dismiss="alert">×</a>
+        {{message}}
+    </div>
+    {% endfor %}
+    {% endif %}
+</div>
+
+<!-- Morris Charts JavaScript -->
+<script src="{{STATIC_URL}}morris/raphael.min.js"></script>
+<script src="{{STATIC_URL}}morris/morris.min.js"></script>
+<script src="{{STATIC_URL}}morris/morris-data.js"></script>
 
 
 </body>
