--- a/AppRisk/templates/protocol_detail.html
+++ b/AppRisk/templates/protocol_detail.html
@@ -1,14 +1,14 @@
 <div class="modal-header">
 	<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-	<h4 class="modal-title">Host Detail</h4>
+	<h4 class="modal-title">Protocol Detail</h4>
 </div>
 <div class="modal-body">
 	<dl>
-		 <dt>Host Name</dt>
+		 <dt>Protocol Name</dt>
 		 <dd>{{ object.name }}</dd>
-         <dt>Host Address </dt>
-		 <dd>{{ object.getFullAddress }}</dd>
-		 <dt>Host Description </dt>
+         <dt>Protocol Number </dt>
+		 <dd>{{ object.number }}</dd>
+		 <dt>Protocol Description </dt>
 		 <dd>{{ object.description }}</dd>
 	</dl>
 
