--- a/AppRisk/templates/base.html
+++ b/AppRisk/templates/base.html
@@ -1,4 +1,4 @@
-{% load staticfiles i18n %}
+{% load i18n %}
 
 <!DOCTYPE html>
 <html>
@@ -10,9 +10,9 @@
     <script src="{{STATIC_URL}}jquery-1.11.1/jquery-ui-1.11.0/jquery-ui.js"></script>
     <script src="{{STATIC_URL}}bootstrap/js/bootstrap.js" type="text/javascript"></script>
     <link href="{{STATIC_URL}}bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="{{STATIC_URL}}css/other.css" rel="stylesheet">
 
-    <script type="text/javascript" src="{% static " js
-    /other.js" %}"></script>
+    <script type="text/javascript" src="/admin/jsi18n/"></script>
 
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin/css/base.css" />
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin/css/forms.css" />
@@ -24,7 +24,9 @@
     <script type="text/javascript" src="{{STATIC_URL}}admin/js/SelectFilter2.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}admin/js/calendar.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}admin/js/admin/DateTimeShortcuts.js"></script>
-    <script type="text/javascript">window.__admin_media_prefix__ = "/static/admin/"; </script>
+
+    <link href="{{STATIC_URL}}css/other.css" rel="stylesheet">
+
 
 
     <style>
@@ -70,16 +72,16 @@
                 <a class="dropdown-toggle" data-toggle="dropdown" href="/onebt/risk/">Objects<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
                     <li><a href="/apprisk/host/list">Hosts</a></li>
-                    <li><a href="/onebt/risk/create/">Networks</a></li>
-                    <li><a href="/onebt/risk/statistic/">URLs</a></li>
-                    <li><a href="/onebt/risk/statistic/">Protocols</a></li>
-                    <li><a href="/onebt/risk/statistic/">Ports</a></li>
-                    <li><a href="/onebt/risk/statistic/">Chains</a></li>
-                    <li><a href="/onebt/risk/statistic/">Host Sets</a></li>
-                    <li><a href="/onebt/risk/statistic/">Network Sets</a></li>
+                    <li><a href="/apprisk/network/list">Networks</a></li>
+                    <li><a href="/apprisk/url/list">URLs</a></li>
+                    <li><a href="/apprisk/protocol/list">Protocols</a></li>
+                    <li><a href="/apprisk/port/list">Ports</a></li>
+                    <li><a href="/apprisk/chain/list">Chains</a></li>
+                    <li><a href="/apprisk/hostset/list">Host Sets</a></li>
+                    <li><a href="/apprisk/netset/list">Net Sets</a></li>
                 </ul>
             </li>
-            <li><a href="">Firewall Rules</a></li>
+            <li><a href="/apprisk/filter/list">Firewall Rules</a></li>
             <li><a href="">Traffic Shapping</a></li>
             <li><a href="">Routing</a></li>
             <li><a href="">System</a></li>
@@ -105,11 +107,11 @@
     {% endif %}
 </div>
 
-<!-- Morris Charts JavaScript -->
+<!-- Morris Charts JavaScript
 <script src="{{STATIC_URL}}morris/raphael.min.js"></script>
 <script src="{{STATIC_URL}}morris/morris.min.js"></script>
 <script src="{{STATIC_URL}}morris/morris-data.js"></script>
-
+-->
 
 </body>
 </html>
