--- a/AppRisk/templates/hostset_detail.html
+++ b/AppRisk/templates/hostset_detail.html
@@ -1,15 +1,13 @@
 <div class="modal-header">
 	<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-	<h4 class="modal-title">Host Detail</h4>
+	<h4 class="modal-title">Host Set Detail</h4>
 </div>
 <div class="modal-body">
 	<dl>
-		 <dt>Host Name</dt>
+		 <dt>Host Set Name</dt>
 		 <dd>{{ object.name }}</dd>
-         <dt>Host Address </dt>
-		 <dd>{{ object.getFullAddress }}</dd>
-		 <dt>Host Description </dt>
-		 <dd>{{ object.description }}</dd>
+         <dt>Host Set Address </dt>
+		 <dd>{{ object.buidSet }}</dd>
 	</dl>
 
 </div>
