--- a/AppRisk/templates/base.html
+++ b/AppRisk/templates/base.html
@@ -81,7 +81,8 @@
                     <li><a href="/apprisk/netset/list">Net Sets</a></li>
                 </ul>
             </li>
-            <li><a href="/apprisk/filter/list">Firewall Rules</a></li>
+            <li><a href="/apprisk/filter/list">Filter Rules</a></li>
+            <li><a href="/apprisk/nat/list">NAT Rules</a></li>
             <li><a href="">Traffic Shapping</a></li>
             <li><a href="">Routing</a></li>
             <li><a href="">System</a></li>
