--- a/AppRisk/templates/filter_list.html
+++ b/AppRisk/templates/filter_list.html
@@ -27,7 +27,7 @@
         <th>Port</th>
         <th>Log</th>
         <th>Action</th>
-        <th style='width : 100px'>Action</th>
+        <th style='width : 97px'></th>
     </tr>
     </thead>
     <tbody>
