--- a/AppRisk/templates/base.html
+++ b/AppRisk/templates/base.html
@@ -79,13 +79,20 @@
                     <li><a href="/apprisk/chain/list">Chains</a></li>
                     <li><a href="/apprisk/hostset/list">Host Sets</a></li>
                     <li><a href="/apprisk/netset/list">Net Sets</a></li>
+                    <li><a href="/apprisk/interface/list">Interfaces</a></li>
                 </ul>
             </li>
             <li><a href="/apprisk/filter/list">Filter Rules</a></li>
             <li><a href="/apprisk/nat/list">NAT Rules</a></li>
             <li><a href="">Traffic Shapping</a></li>
-            <li><a href="">Routing</a></li>
-            <li><a href="">System</a></li>
+            <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="/onebt/">System<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+                <li><a href="/apprisk/interfaces">Interfaces</a></li>
+                <li><a href="/apprisk/routes">Routes</a></li>
+                <li><a href="/apprisk/connections">Connections</a></li>
+            </ul>
+            </li>
         </ul>
     </div>
     <div class="col-sm-10 col-md-10">
