--- a/AppRisk/templates/base.html
+++ b/AppRisk/templates/base.html
@@ -10,9 +10,7 @@
     <script src="{{STATIC_URL}}jquery-1.11.1/jquery-ui-1.11.0/jquery-ui.js"></script>
     <script src="{{STATIC_URL}}bootstrap/js/bootstrap.js" type="text/javascript"></script>
     <link href="{{STATIC_URL}}bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="{{STATIC_URL}}css/other.css" rel="stylesheet">
 
-    <script type="text/javascript" src="/admin/jsi18n/"></script>
 
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin/css/base.css" />
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin/css/forms.css" />
@@ -26,6 +24,7 @@
     <script type="text/javascript" src="{{STATIC_URL}}admin/js/admin/DateTimeShortcuts.js"></script>
 
     <link href="{{STATIC_URL}}css/other.css" rel="stylesheet">
+    <script type="text/javascript" src="{{STATIC_URL}}js/other.js"></script>
 
 
 
@@ -88,6 +87,7 @@
             <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="/onebt/">System<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
+                <li><a href="/apprisk/process">Processes</a></li>
                 <li><a href="/apprisk/interfaces">Interfaces</a></li>
                 <li><a href="/apprisk/routes">Routes</a></li>
                 <li><a href="/apprisk/connections">Connections</a></li>
