--- a/AppRisk/templates/base.html
+++ b/AppRisk/templates/base.html
@@ -54,7 +54,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="#">Configuration</a></li>
                     <li><a href="#">Statistics</a></li>
-                    <li><a href="#">Sobre</a></li>
+                    <li><a href="/apprisk/logout">Logout</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -87,7 +87,7 @@
             <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="/onebt/">System<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-                <li><a href="/apprisk/process">Processes</a></li>
+                <li><a href="/apprisk/processes">Processes</a></li>
                 <li><a href="/apprisk/interfaces">Interfaces</a></li>
                 <li><a href="/apprisk/routes">Routes</a></li>
                 <li><a href="/apprisk/connections">Connections</a></li>
