--- a/AppRisk/templates/base.html
+++ b/AppRisk/templates/base.html
@@ -6,15 +6,18 @@
     <meta charset="UTF-8">
     <title></title>
 
+
+
     <script src="{{STATIC_URL}}jquery-1.11.1/jquery-1.11.1.min.js"></script>
     <script src="{{STATIC_URL}}jquery-1.11.1/jquery-ui-1.11.0/jquery-ui.js"></script>
+
     <script src="{{STATIC_URL}}bootstrap/js/bootstrap.js" type="text/javascript"></script>
     <link href="{{STATIC_URL}}bootstrap/css/bootstrap.css" rel="stylesheet">
 
+    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin/css/base.css"/>
+    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin/css/forms.css"/>
 
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin/css/base.css" />
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin/css/forms.css" />
-    <script type="text/javascript" src="{{STATIC_URL}}admin/js/core.js" ></script>
+    <script type="text/javascript" src="{{STATIC_URL}}admin/js/core.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}admin/js/jquery.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}admin/js/jquery.init.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}admin/js/actions.js"></script>
@@ -23,10 +26,14 @@
     <script type="text/javascript" src="{{STATIC_URL}}admin/js/calendar.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}admin/js/admin/DateTimeShortcuts.js"></script>
 
+    <!-- DataTables -->
+    <script src="{{STATIC_URL}}jquery-1.11.1/datatables/js/jquery.dataTables.js"></script>
+    <link href="{{STATIC_URL}}jquery-1.11.1/datatables/css/jquery.dataTables.css" rel="stylesheet">
+    <link href="{{STATIC_URL}}jquery-1.11.1/datatables/css/bootstrap-dataTables.css" rel="stylesheet">
+
+
     <link href="{{STATIC_URL}}css/other.css" rel="stylesheet">
     <script type="text/javascript" src="{{STATIC_URL}}js/other.js"></script>
-
-
 
     <style>
         body {
@@ -48,29 +55,78 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Snoopy</a>
+                <a class="navbar-brand" href="#">PyGuiFW</a>
             </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
+
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="#">Configuration</a></li>
-                    <li><a href="#">Statistics</a></li>
-                    <li><a href="/apprisk/logout">Logout</a></li>
+                    <li><a href="{% url 'composerview' %}">Overview</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Rules
+                            <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="{% url 'filter-list' %}">Filter</a></li>
+                            <li><a href="{% url 'nat-list' %}">Nat</a></li>
+                            <li><a href="#">Traffic Shapping</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Objects
+                            <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="{% url 'host-list' %}">Hosts</a></li>
+                            <li><a href="{% url 'network-list' %}">Networks</a></li>
+                            <li><a href="{% url 'url-list' %}">URLs</a></li>
+                            <li class="divider"></li>
+                            <li><a href="{% url 'hostset-list' %}">Host Sets</a></li>
+                            <li><a href="{% url 'netset-list' %}">Net Sets</a></li>
+                            <li class="divider"></li>
+                            <li><a href="{% url 'protocol-list' %}">Protocols</a></li>
+                            <li><a href="{% url 'port-list' %}">Ports</a></li>
+                            <li class="divider"></li>
+                            <li><a href="{% url 'interface-list' %}">Interfaces</a></li>
+                            <li class="divider"></li>
+                            <li><a href="{% url 'chain-list' %}">Chains</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">System
+                            <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="{% url 'processes' %}">Processes</a></li>
+                            <li><a href="{% url 'interfaces' %}">Interfaces</a></li>
+                            <li><a href="{% url 'routes' %}">Routes</a></li>
+                            <li><a href="{% url 'connections' %}">Connections</a></li>
+                            <li class="divider"></li>
+                            <li><a href="{% url 'about' %}">About</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <!--<form class="navbar-form navbar-left" role="search">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form> -->
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="{% url 'logout' %}">Logout</a></li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
     </div>
 </nav>
 <!-- Menu de Navegação -->
 
 <div class="row">
+    <!--
     <div class="col-sm-2 col-md-2">
         <ul class="nav nav-sidebar">
-            <li><a href="/onebt/index">Overview</a></li>
+            <li><a href="/apprisk/composerview">Overview</a></li>
             <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="/onebt/risk/">Objects<span class="caret"></span></a>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Objects<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-                    <li><a href="/apprisk/host/list">Hosts</a></li>
+                    <li><a href="{% url 'host-list' %}">Hosts</a></li>
                     <li><a href="/apprisk/network/list">Networks</a></li>
                     <li><a href="/apprisk/url/list">URLs</a></li>
                     <li><a href="/apprisk/protocol/list">Protocols</a></li>
@@ -85,22 +141,19 @@
             <li><a href="/apprisk/nat/list">NAT Rules</a></li>
             <li><a href="">Traffic Shapping</a></li>
             <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="/onebt/">System<span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-                <li><a href="/apprisk/processes">Processes</a></li>
-                <li><a href="/apprisk/interfaces">Interfaces</a></li>
-                <li><a href="/apprisk/routes">Routes</a></li>
-                <li><a href="/apprisk/connections">Connections</a></li>
-            </ul>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="/onebt/">System<span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+
+                </ul>
             </li>
         </ul>
     </div>
-    <div class="col-sm-10 col-md-10">
+    -->
+    <div class="container">
         <div class="container-fluid">
             {% block content %}
             {% endblock %}
         </div>
-        <!-- /container -->
     </div>
 </div>
 
