--- a/AppRisk/templates/denied.html
+++ b/AppRisk/templates/denied.html
@@ -12,9 +12,9 @@
     <link href="{{STATIC_URL}}bootstrap/css/bootstrap.css" rel="stylesheet">
 
 
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin/css/base.css"/>
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin/css/forms.css"/>
-    <script type="text/javascript" src="{{STATIC_URL}}admin/js/core.js"></script>
+    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin/css/base.css" />
+    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin/css/forms.css" />
+    <script type="text/javascript" src="{{STATIC_URL}}admin/js/core.js" ></script>
     <script type="text/javascript" src="{{STATIC_URL}}admin/js/jquery.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}admin/js/jquery.init.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}admin/js/actions.js"></script>
@@ -43,7 +43,14 @@
             <h1 > Nano IpTables </h1>
             <h4 > Web Interface to Iptables Firewall </h4>
             <h1 style="color:#FF2222"> Permission Denied </h1>
-            <h3> <a href="javascript:history.go(-1)"> <input class="btn btn-primary btn-sm" type="button" value="Return"/> </a></h3>
+            <h3><a href="{% url 'login'%}">
+                <button class="btn btn-primary " type="button" value="Login">
+                <span class="glyphicon glyphicon-user"></span> Login </button></a>
+            </h3>
+            <h3><a href="javascript:history.go(-1)">
+                <button class="btn btn-primary "  type="button" value="Return">
+                <span class="glyphicon glyphicon-repeat"></span> Return </button></a>
+            </h3>
         </div>
         <div class="col-xs-6 col-md-4"></div>
     </div>
