--- a/AppRisk/templates/url_list.html
+++ b/AppRisk/templates/url_list.html
@@ -63,7 +63,11 @@
 <script type="text/javascript">
 
 $(document).ready(function(){
-
+    $('#datatable').DataTable({
+        "lengthMenu": [ [10, 25, 50, -1], [10, 25, 50, "All"] ] ,
+        "pageLength": 50,
+    });
+    
     //function is used to delete selected row
     $('.deleteall').on("click", function(event){
         var items=[]
