--- a/static/css/other.css
+++ b/static/css/other.css
@@ -213,3 +213,14 @@ font-family:"Lucida Grande",Verdana,Arial,sans-serif;
 font-size:11px;
 font-weight:normal;
 }
+
+
+table.dataTable tbody th, table.dataTable tbody td {
+
+  vertical-align: middle;
+}
+
+ul li {
+    list-style-type: None;
+    padding: 1px 0;
+}
