--- a/AppRisk/templates/base.html
+++ b/AppRisk/templates/base.html
@@ -60,7 +60,7 @@
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="{% url 'composerview' %}">Overview</a></li>
+                    <li><a href="{% url 'ruleview' %}">Overview</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Rules
                             <span class="caret"></span></a>
@@ -68,6 +68,11 @@
                             <li><a href="{% url 'filter-list' %}">Filter</a></li>
                             <li><a href="{% url 'nat-list' %}">Nat</a></li>
                             <li><a href="#">Traffic Shapping</a></li>
+                            <li class="divider"></li>
+                            <li><a href="{% url 'ruleview' %}">View Rules</a></li>
+                            <li><a href="{% url 'ruleapply' %}">Apply Rules</a></li>
+                            <li class="divider"></li>
+
                         </ul>
                     </li>
 
