--- a/guifw/templates/base.html
+++ b/guifw/templates/base.html
@@ -154,11 +154,10 @@
         </ul>
     </div>
     -->
-    <div class="container">
+    <div class="container-fluid">
         <div class="container-fluid">
             {% block content %}
             {% endblock %}
-        </div>
     </div>
 </div>
 
