--- a/guifw/templates/nat_form.html
+++ b/guifw/templates/nat_form.html
@@ -4,7 +4,7 @@
 
 {% load addcss %}
 
-<div class="row" style="width:740px;">
+<div class="row">
     {{form.non_field_errors}}
     <form role="form" action="" method="post">{% csrf_token %}
         <fieldset>
