--- a/guifw/templates/ruleapply.html
+++ b/guifw/templates/ruleapply.html
@@ -1,23 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2> Apply Rules:
-    <a href="{% url 'rule-apply' %}">
-        <button type="button" class="btn btn-danger btn-sm" data-toggle="tooltip" title="Rule Apply">
-            <span class="glyphicon glyphicon-ok"></span> Save and Apply
-        </button>
-    </a>
-    <a href="{% url 'rule-save' %}">
-        <button type="button" class="btn btn-danger btn-sm" data-toggle="tooltip" title="Rule Apply">
-            <span class="glyphicon glyphicon-save"></span> Only Save
-        </button>
-    </a>
-</h2>
 
-<h2>NAT Apply</h2>
-{{ nats }}
-
-<h2>Rule Apply</h2>
-{{ rules }}
+<h2>NAT and Rule Apply</h2>
 
 {% endblock %}
