calendar time and date rules

--- a/guifw/templates/base.html
+++ b/guifw/templates/base.html
@@ -11,6 +11,9 @@
     <script src="{{STATIC_URL}}jquery-1.11.1/jquery-1.11.1.min.js"></script>
     <script src="{{STATIC_URL}}jquery-1.11.1/jquery-ui-1.11.0/jquery-ui.js"></script>
 
+    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}jquery-1.11.1/datetimepicker/jquery.datetimepicker.css"/>
+    <script src="{{STATIC_URL}}jquery-1.11.1/datetimepicker/jquery.datetimepicker.js"></script>
+
     <script src="{{STATIC_URL}}bootstrap/js/bootstrap.js" type="text/javascript"></script>
     <link href="{{STATIC_URL}}bootstrap/css/bootstrap.css" rel="stylesheet">
 
