--- a/guifw/templates/filter_form.html
+++ b/guifw/templates/filter_form.html
@@ -45,4 +45,16 @@
         </div>
     </form>
 </div>
+
+<script>
+  $('.datepicker').datetimepicker({
+  format:'Y-m-d',
+  timepicker:false,
+  });
+  $('.timepicker').datetimepicker({
+  format:'H:i',
+  datepicker:false,
+  });
+</script>
+
 {% endblock %}
